<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/LinearLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.utl.comunicacionactividades.Condiciones" >

<TextView
    android:id="@+id/tvMensaje"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/tvMensaje" />

<Button
    android:id="@+id/btnAceptar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/btnAceptar"
    android:onClick="aceptarCondiciones" />

<Button
    android:id="@+id/btnRechazar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/btnRechazar"
    android:onClick="rechazarCondiciones" />

</LinearLayout>