<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/LinearLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.utl.comunicacionactividades.MainActivity" >

<TextView
    android:id="@+id/tvNombre"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/tvNombre" />

<EditText
    android:id="@+id/txtNombre"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName|textCapSentences" >

    <requestFocus />
</EditText>

<Button
    android:id="@+id/btnVerificar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/btnVeificar"
    android:onClick="cargaActivityConfirmacion" />

<TextView
    android:id="@+id/tvResultado"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/tvResultado" />

</LinearLayout>
